--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "license": "MIT",
     "require": {
         "php": "~8.1",
-        "bbldn/cqrs": "^0.1.0",
-        "illuminate/support": "^9.0",
-        "illuminate/contracts": "^9.0"
+        "bbldn/cqrs": "^0.1.1",
+        "illuminate/support": "^9.0|^10.0",
+        "illuminate/contracts": "^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -26,5 +26,8 @@
                 "BBLDN\\CQRSLaravel\\ServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "vimeo/psalm": "^5.9"
     }
 }
